# pybench

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg
pybench/: __init__.py  benchmark.py  cli.py
