[metadata]
name = criterion
version = 0.0.1
description = Benchmark suite for Python
license = MIT
author = Sergio Sánchez Ramírez
author_email = sergio.sanchez.ramirez@bsc.es
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mofeing/criterion-py
project_urls =
	Bug Tracker = https://github.com/mofeing/criterion-py/issues
classifiers =
	Software Development
	System :: Benchmark
	Operating System :: OS Independent

[options]
packages = find:
python_requires = >= 3.0
